--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <script
+            src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
     </head>
     <body>
-        <h1>Hello WOrld</h1>
+        <div class="flex container mx-auto mt-20">
+            <a href="/homepage.html"
+                class="p-4 bg-sky-800 text-white mr-4">首頁</a>
+            <a href="/about.html"
+                class="p-4 bg-sky-800 text-white mr-4">關於我們</a>
+            <a href="/team.html" class="p-4 bg-sky-800 text-white mr-2">醫療團隊</a>
+            <a href="/environment.html"
+                class="p-4 bg-sky-800 text-white mr-4">環境介紹</a>
+            <a href="/equipment.html"
+                class="p-4 bg-sky-800 text-white mr-4">醫療設備</a>
+            <a href="/services.html"
+                class="p-4 bg-sky-800 text-white mr-4">醫療項目</a>
+            <a href="/news.html" class="p-4 bg-sky-800 text-white mr-4">最新消息</a>
+            <a href="/cases.html"
+                class="p-4 bg-sky-800 text-white mr-4">案例分享</a>
+            <a href="/contact.html"
+                class="p-4 bg-sky-800 text-white mr-4">聯絡我們</a>
+        </div>
+
     </body>
 </html>
