--- a/homepage.html
+++ b/homepage.html
@@ -101,21 +101,21 @@
                         </style>
 
     </head>
-    <body class="font-light">
+    <body class="font-light tracking-wider text-gray-700">
         <nav class="bg-white shadow fixed w-full z-50 top-0 py-4 text-gray-700">
             <div class="mx-auto max-w-7xl px-2 sm:px-4 lg:px-8">
                 <div class="flex h-12 justify-between">
                     <div class="flex px-2 lg:px-0 justify-between w-full">
                         <a href="https://aiidee.com.tw"
                             class="flex flex-shrink-0 items-center">
-                            <img class="logo-white block w-24"
+                            <img class="logo-white block w-36"
                                 src="./nav-logo.png"
                                 alt="Company name">
                         </a>
                         <div id="list"
-                            class=" hidden lg:ml-6 lg:flex lg:space-x-8">
+                            class="text-sm items-center hidden lg:ml-6 lg:flex lg:space-x-8">
                             <!-- Current: "border-indigo-500 ", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
-                            <a href="https://aiidee.com.tw"
+                            <a href="#"
                                 class="items-center0 border-b-2 border-transparent px-1 pt-1 font-medium  hover:border-gray-300 hover:text-gray-70 border-green-700 ">首頁</a>
 
                             <div class="dropdown">
@@ -207,29 +207,35 @@
         </header>
 
         <section>
-            <div class="flex flex-wrap text-xl text-center font-medium">
-                <div class="bg-sky-600 text-white w-1/3 px-4 py-8">
+            <div
+                class="flex flex-wrap text-xl text-center tracking-widest">
+                <div
+                    class="bg-sky-800 text-white w-1/4 px-4 py-8 font-light text-sm">
                     <h3 class="mb-4">
-                        全口重建
+                        <span
+                            class="text-3xl font-medium inline-block mb-2">20年+</span><br />矯正經驗
                     </h3>
-                    <p class="mb-4">
-                        針對嚴重缺牙、牙周病、無 法正進食咀嚼的病患,重建 健康的咬合與自然的美觀笑 容。包含牙冠牙橋、植牙、
-                        矯正等多項療程。
-                    </p>
-                    <a href="#"> 了解更多</a>
                 </div>
-                <div class="bg-sky-800 text-white w-1/3 px-4 py-8">
+                <div
+                    class="bg-sky-800 text-white w-1/4 px-4 py-8 font-light text-sm">
                     <h3 class="mb-4">
-                        隱適美 </h3>
-                    <p class="mb-4">美國原廠隱形矯正,擺脫傳統矯 正器的不舒適,更佳美觀,也更 方便日常清潔與飲食。
-                    </p>
-                    <a href="#"> 了解更多</a>
-                </div><div class="bg-sky-600 text-white w-1/3 px-4 py-8">
+                        <span
+                            class="text-3xl font-medium inline-block mb-2">10年+</span><br />隱適美經驗
+                    </h3>
+                </div>
+                <div
+                    class="bg-sky-800 text-white w-1/4 px-4 py-8 font-light text-sm">
                     <h3 class="mb-4">
-                        陶瓷貼片 </h3>
-                    <p class="mb-4">一種極薄的陶瓷片,改善牙齒顔 色、形狀、縫隙與排列問題。療 程快速、效果自然持久,是追求
-                        完美笑容與明星級牙齒 亮白感的熱門選擇</p>
-                    <a href="#"> 了解更多</a>
+                        <span
+                            class="text-3xl font-medium inline-block mb-2">每年100例以上</span><br />隱適美成功案例
+                    </h3>
+                </div>
+                <div
+                    class="bg-sky-800 text-white w-1/4 px-4 py-8 font-light text-sm">
+                    <h3 class="mb-4">
+                        <span
+                            class="text-3xl font-medium inline-block mb-2">累積超過2000例</span><br />成功矯正案例
+                    </h3>
                 </div>
             </div>
         </section>
@@ -346,26 +352,29 @@
         </section>
 
         <section>
-            <div class="flex flex-wrap text-xl text-center font-medium">
-                <div class="bg-sky-800 text-white w-1/4 px-4 py-8">
-                    <h3 class="mb-4">
-                        20年+<br />矯正經驗
+            <div class="flex flex-wrap  text-center ">
+                <div class="bg-sky-600 text-white w-1/3 px-4 py-8">
+                    <h3 class="text-3xl font-medium inline-block mb-2">
+                        全口重建
                     </h3>
+                    <p class="mb-4">
+                        針對嚴重缺牙、牙周病、無 法正進食咀嚼的病患,重建 健康的咬合與自然的美觀笑 容。包含牙冠牙橋、植牙、
+                        矯正等多項療程。
+                    </p>
+                    <a href="#"> 了解更多</a>
                 </div>
-                <div class="bg-sky-800 text-white w-1/4 px-4 py-8">
-                    <h3 class="mb-4">
-                        10年+<br />隱適美經驗
-                    </h3>
-                </div>
-                <div class="bg-sky-800 text-white w-1/4 px-4 py-8">
-                    <h3 class="mb-4">
-                        每年100例以上<br />隱適美成功案例
-                    </h3>
-                </div>
-                <div class="bg-sky-800 text-white w-1/4 px-4 py-8">
-                    <h3 class="mb-4">
-                        累積超過2000例<br />成功矯正案例
-                    </h3>
+                <div class="bg-sky-800 text-white w-1/3 px-4 py-8">
+                    <h3 class="text-3xl font-medium inline-block mb-2">
+                        隱適美 </h3>
+                    <p class="mb-4">美國原廠隱形矯正,擺脫傳統矯 正器的不舒適,更佳美觀,也更 方便日常清潔與飲食。
+                    </p>
+                    <a href="#"> 了解更多</a>
+                </div><div class="bg-sky-600 text-white w-1/3 px-4 py-8">
+                    <h3 class="text-3xl font-medium inline-block mb-2">
+                        陶瓷貼片 </h3>
+                    <p class="mb-4">一種極薄的陶瓷片,改善牙齒顔 色、形狀、縫隙與排列問題。療 程快速、效果自然持久,是追求
+                        完美笑容與明星級牙齒 亮白感的熱門選擇</p>
+                    <a href="#"> 了解更多</a>
                 </div>
             </div>
         </section>
@@ -673,6 +682,14 @@
                     <path d="M12 19V5M5 12l7-7 7 7" />
                 </svg>
             </button>
+
+            <div class="fixed" style="bottom: 80px; right: 15px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60"
+                    viewBox="0 0 48 48"><path fill="#00c300"
+                        d="M12.5 42h23a6.5 6.5 0 0 0 6.5-6.5v-23A6.5 6.5 0 0 0 35.5 6h-23A6.5 6.5 0 0 0 6 12.5v23a6.5 6.5 0 0 0 6.5 6.5z" /><path
+                        fill="#fff"
+                        d="M37.113 22.417c0-5.865-5.88-10.637-13.107-10.637s-13.108 4.772-13.108 10.637c0 5.258 4.663 9.662 10.962 10.495.427.092 1.008.282 1.155.646.132.331.086.85.042 1.185 0 0-.153.925-.187 1.122-.057.331-.263 1.296 1.135.707 1.399-.589 7.548-4.445 10.298-7.611h-.001c1.901-2.082 2.811-4.197 2.811-6.544zm-18.238 3.49h-2.604a.688.688 0 0 1-.687-.688V20.01a.688.688 0 0 1 1.374 0v4.521h1.917a.688.688 0 0 1 0 1.376zm2.693-.688a.688.688 0 1 1-1.374 0V20.01a.688.688 0 0 1 1.374 0v5.209zm6.27 0a.684.684 0 0 1-.688.688.69.69 0 0 1-.549-.275l-2.669-3.635v3.222a.689.689 0 0 1-1.376 0V20.01a.687.687 0 0 1 1.237-.412l2.67 3.635V20.01a.688.688 0 0 1 1.375 0v5.209zm4.214-3.292a.689.689 0 0 1 0 1.375h-1.917v1.23h1.917a.688.688 0 0 1 0 1.375h-2.604a.688.688 0 0 1-.687-.688V20.011c0-.379.308-.687.687-.687h2.604a.688.688 0 1 1 0 1.374h-1.917v1.23h1.917z" /></svg>
+            </div>
 
             <script>
                 // JavaScript
