--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <script
-            src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <link href="./output.css" rel="stylesheet">
 
     </head>
     <body>
@@ -25,18 +24,32 @@
                 </div>
                 <div class="w-1/2">
                     <div class="mb-8">
-                        <h2 class="text-2xl font-bold mb-4">初診資料搜集</h2>
-                        <ul class="list-disc pl-5 space-y-2 text-gray-700">
-                            <li>諮詢前我們將為您做初步的口腔檢查及X光檢查</li>
-                            <li>拍攝口腔及光面X光片</li>
-                            <li>口腔內外口腔檢查</li>
-                            <li>數位牙齒掃描儀器(Digital Smile
-                                Design)也稱為3D微笑設計，是透過數位技術來分析您的牙齒和臉部比例，並設計出最適合您的笑容</li>
+                        <h2
+                            class="mb-4 text-skin text-3xl my-8 font-semibold">初診資料搜集</h2>
+                        <ul class="space-y-2 text-gray-700">
+                            <li class="mb-4">1️⃣ 預約初次矯正諮詢<br />
+                                透過電話、LINE
+                                或FB/IG線上預約系統安排看診時間，由專業團隊協助您進入隱適美評估流程。<br />
+                                🔸 適合：初次考慮矯正者／曾矯正但牙齒變形者。</li>
+                            <li>2️⃣ 收集口腔資料<br />
+
+                                現場進行口內拍照、X光攝影與 3D 口掃（使用 iTero 5D
+                                Plus），完整掌握牙齒排列、咬合與骨骼狀況。
+                                🔸 不須取模、快速舒適，立即生成初步模擬影像。</li>
+                            <li>3️⃣ 與醫師討論治療計畫<br />
+
+                                由專業矯正醫師說明您的牙齒現況、評估可行治療選項，初步解析所需時程、可預期成果與注意事項。
+                                🔸 針對每位患者量身訂製個人化治療建議。</li>
+                            <li>4️⃣ 與諮詢師專業解說<br />
+
+                                由專責諮詢師進一步解說療程流程、費用方案、隱適美配戴須知及常見問題，幫助您全面了解並安心決定。
+                                🔸 提供分期付款說明與後續追蹤計劃安排。</li>
                         </ul>
                     </div>
 
                     <div class="mb-8">
-                        <h2 class="text-2xl font-bold mb-4">諮詢與專業治療</h2>
+                        <h2
+                            class="mb-4 text-skin text-3xl my-8 font-semibold">諮詢與專業治療</h2>
                         <ul class="list-disc pl-5 space-y-2 text-gray-700">
                             <li>使用最新穎的治療設備・隱適美正顎治療</li>
                             <li>OrthoPulse光療促進</li>
@@ -47,7 +60,8 @@
                     </div>
 
                     <div>
-                        <h2 class="text-2xl font-bold mb-4">與醫師討論治療計劃</h2>
+                        <h2
+                            class="mb-4 text-skin text-3xl my-8 font-semibold">與醫師討論治療計劃</h2>
                         <p class="text-gray-700 leading-relaxed">
                             每位人都擁有獨特的笑容，每個人對治療的需求也不同，我們會根據您的需求，與您共同制定最適合您的治療計劃，並提供專業的建議與後續追蹤服務。
                         </p>
@@ -60,7 +74,7 @@
             <div class="flex flex-wrap">
                 <div class="sm:w-1/2 p-4">
                     <div>
-                        <h1 class="text-xl font-bold text-gray-800">診所資訊</h1>
+                        <h1 class="text-xl font-bold text-skin mb-4">診所資訊</h1>
                         <p class="text-gray-600">地址: 台北市大安區忠孝東路四段134號3F</p>
                         <p class="text-gray-600">電話: 02-2737-2100</p>
                         <p class="text-gray-600">電子郵件: ymdctw0100@gmail.com</p>
@@ -76,71 +90,72 @@
                     </div>
                 </div>
 
-                <div class="sm:w-1/2 p-4">
+                <div class="sm:w-1/2">
                     <div class="space-y-6">
-                        <h1 class="text-2xl font-bold text-gray-800">營業時間</h1>
+                        <h1 class="text-2xl font-bold text-skin mb-4">營業時間</h1>
 
                         <p
                             class="text-gray-700">本診所為完全預約制，請來電或加入Line官方帳號預約諮詢時間。</p>
 
                         <div class="overflow-x-auto">
                             <table
-                                class="w-full border-collapse border border-yellow-800 text-center">
+                                class="w-full border-collapse border border-yellow-800 text-center"
+                                style="color: #987B5D">
                                 <thead>
-                                    <tr class="bg-yellow-600 ">
+                                    <tr style="background-color: #B4976D;">
                                         <th
-                                            class="border border-yellow-800 px-4 py-2 ">星期</th>
+                                            class="border border-yellow-800 px-4 py-4 ">星期</th>
                                         <th
-                                            class="border border-yellow-800 px-4 py-2 ">營業時間</th>
+                                            class="border border-yellow-800 px-4 py-4 ">營業時間</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="bg-orange-300">
+                                    <tr style="background-color: #E3D2B0;">
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">週一</td>
+                                            class="border border-yellow-800 px-4 py-4">週一</td>
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">休診</td>
+                                            class="border border-yellow-800 px-4 py-4">休診</td>
                                     </tr>
                                     <tr>
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">週二</td>
+                                            class="border border-yellow-800 px-4 py-4">週二</td>
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">13:00
+                                            class="border border-yellow-800 px-4 py-4">13:00
                                             - 20:00</td>
                                     </tr>
-                                    <tr class="bg-orange-300">
+                                    <tr style="background-color: #E3D2B0;">
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">週三</td>
+                                            class="border border-yellow-800 px-4 py-4">週三</td>
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">13:00
+                                            class="border border-yellow-800 px-4 py-4">13:00
                                             - 20:00</td>
                                     </tr>
                                     <tr>
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">週四</td>
+                                            class="border border-yellow-800 px-4 py-4">週四</td>
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">13:00
+                                            class="border border-yellow-800 px-4 py-4">13:00
                                             - 20:00</td>
                                     </tr>
-                                    <tr class="bg-orange-300">
+                                    <tr style="background-color: #E3D2B0;">
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">週五</td>
+                                            class="border border-yellow-800 px-4 py-4">週五</td>
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">09:00
+                                            class="border border-yellow-800 px-4 py-4">09:00
                                             - 17:00</td>
                                     </tr>
                                     <tr>
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">週六</td>
+                                            class="border border-yellow-800 px-4 py-4">週六</td>
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">09:00
+                                            class="border border-yellow-800 px-4 py-4">09:00
                                             - 17:00</td>
                                     </tr>
-                                    <tr class="bg-orange-300">
+                                    <tr style="background-color: #E3D2B0;">
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">週日</td>
+                                            class="border border-yellow-800 px-4 py-4">週日</td>
                                         <td
-                                            class="border border-yellow-800 px-4 py-2">休診</td>
+                                            class="border border-yellow-800 px-4 py-4">休診</td>
                                     </tr>
                                 </tbody>
                             </table>
