--- a/homepage.html
+++ b/homepage.html
@@ -594,33 +594,22 @@
                             class="text-gray-300 text-xl font-normal mb-6">聯絡我們</h3>
                         <ul class="text-gray-100 font-normal">
                             <li class="mb-4 flex items-center">
-                                美德美學牙醫診所
-                                營業時間
-
-                                台北 週一到週五 12:00-7:00
-
+                                美德美學牙醫診所<br />
+                                台北市大里區慈德路158號<br />
+                                週一至週五 12:00-7:00<br />
                                 週六日公休
-
-                                美德牙醫診所
 
                             </li>
                             <li class="mb-4 flex items-center">
-                                台中市大里區慈德路158號
-
-                                04-24966788
-
-                                營業時間
-
-                                週一、週二、週三
-                                09:30–11:30 | 14:00–16:30 |
-                                18:00–21:00
-
-                                週四、週五
+                                美德美學牙醫診所<br />
+                                台中市大里區慈德路158號<br />
+                                04-24966788<br />
+                                週一至週三 09:30–11:30 | 14:00–16:30 |
+                                18:00–21:00<br />
+                                週四、週五<br />
                                 09:30–12:30 | 14:00–16:30 |
-                                17:30–19:00
-
-                                週六 09:30–11:30 | 14:00–17:00
-
+                                17:30–19:00<br />
+                                週六 09:30–11:30 | 14:00–17:00<br />
                                 週日公休
                             </li>
 
