--- a/news.html
+++ b/news.html
@@ -8,7 +8,8 @@
             src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     </head>
-    <body>
+    <body class="font-light tracking-wider text-gray-600">
+
         <header
             style="background: url(https://placehold.co/600x400/) center/cover; height: 300px;"
             class="relative text-white">
@@ -21,7 +22,7 @@
         <section class="container max-w-5xl mx-auto py-8">
             <div class="flex flex-wrap">
                 <div
-                    class="container mx-auto py-8 flex flex-col md:flex-row items-center justify-between">
+                    class="container mx-auto py-8 flex flex-col md:flex-row items-center justify-between border-t border-gray-500">
                     <div class="md:w-1/3 px-4">
                         <img src="https://placehold.co/400x300"
                             alt="Dental Procedure"
@@ -29,8 +30,31 @@
                     </div>
                     <div class="md:w-2/3 px-4">
                         <h2
-                            class="text-2xl text-amber-500 mb-4">隱形牙套有用嗎？要戴多久？隱形矯正品牌推薦這樣選！</h2>
-                        <p class="mb-4">2024-Jul.22</p>
+                            class="text-2xl mb-4 font-medium">隱形牙套有用嗎？要戴多久？隱形矯正品牌推薦這樣選！</h2>
+                        <p
+                            class="mb-4 text-xl text-sky-700 font-medium">2024-Jul.22</p>
+                        <p
+                            class="text-gray-700 leading-relaxed">
+                            美國微笑設計學又自信的笑容嗎？<br>
+                            DSD數位微笑設計(Digital Smile
+                            Design)也稱為3D微笑設計，是透過數位技術來分析您的牙齒和臉部比例，並設計出最適合您的笑容。透過此技術，牙醫可以更精準地進行治療，包括牙齒美白、牙齒矯正、補牙、植牙等，讓您的笑容更自然、更動人。
+                        </p>
+                    </div>
+
+                </div>
+
+                <div
+                    class="container mx-auto py-8 flex flex-col md:flex-row items-center justify-between border-t border-gray-500">
+                    <div class="md:w-1/3 px-4">
+                        <img src="https://placehold.co/400x300"
+                            alt="Dental Procedure"
+                            class="rounded-lg shadow-md">
+                    </div>
+                    <div class="md:w-2/3 px-4">
+                        <h2
+                            class="text-2xl mb-4 font-medium">隱形牙套有用嗎？要戴多久？隱形矯正品牌推薦這樣選！</h2>
+                        <p
+                            class="mb-4 text-xl text-sky-700 font-medium">2024-Jul.22</p>
                         <p
                             class="text-gray-700 leading-relaxed">
                             美國微笑設計學又自信的笑容嗎？<br>
