--- a/news.html
+++ b/news.html
@@ -20,6 +20,16 @@
         </header>
 
         <section class="container max-w-5xl mx-auto py-8">
+            <div class="flex">
+                <a href="#" class="mr-4 text-xl font-medium">最新消息1</a>
+                <span class="mx-4 text-xl">|</span>
+                <a href="#" class="mr-4 text-xl">最新消息1</a>
+                <span class="mx-4 text-xl">|</span>
+                <a href="#" class="mr-4 text-xl">最新消息1</a>
+            </div>
+        </section>
+
+        <section class="container max-w-5xl mx-auto pb-8">
             <div class="flex flex-wrap">
                 <div
                     class="container mx-auto py-8 flex flex-col md:flex-row items-center justify-between border-t border-gray-500">
