--- a/homepage.html
+++ b/homepage.html
@@ -381,7 +381,7 @@
                     </a>
                 </div>
                 <div
-                    class="bg-darkskin text-white w-1/3 px-8 py-32 hover:bg-yellow-600">
+                    class="bg-darkskin text-white w-1/3 px-8 py-32 hover:bg-sky-900">
                     <h3 class="text-3xl font-medium inline-block mb-8">
                         隱適美 </h3>
                     <p class="mb-4">美國原廠隱形矯正,擺脫傳統矯 正器的不舒適,更佳美觀,也更 方便日常清潔與飲食。
