--- a/environment.html
+++ b/environment.html
@@ -42,13 +42,28 @@
         <section class="container max-w-5xl mx-auto py-8">
             <div class="flex flex-wrap">
                 <div class="w-1/4 p-2">
-                    <img src="https://placehold.co/600x400/" alt>
+                    <a data-fslightbox="gallery"
+                        href="https://images.pexels.com/photos/32750830/pexels-photo-32750830.jpeg">
+                        <img
+                            src="https://images.pexels.com/photos/32750830/pexels-photo-32750830.jpeg"
+                            alt>
+                    </a>
                 </div>
                 <div class="w-1/4 p-2">
-                    <img src="https://placehold.co/600x400/" alt>
+                    <a data-fslightbox="gallery"
+                        href="https://images.pexels.com/photos/14068779/pexels-photo-14068779.jpeg">
+                        <img
+                            src="https://images.pexels.com/photos/14068779/pexels-photo-14068779.jpeg"
+                            alt>
+                    </a>
                 </div>
                 <div class="w-1/4 p-2">
-                    <img src="https://placehold.co/600x400/" alt>
+                    <a data-fslightbox="gallery"
+                        href="https://images.pexels.com/photos/32832431/pexels-photo-32832431.jpeg">
+                        <img
+                            src="https://images.pexels.com/photos/32832431/pexels-photo-32832431.jpeg"
+                            alt>
+                    </a>
                 </div>
                 <div class="w-1/4 p-2">
                     <img src="https://placehold.co/600x400/" alt>
@@ -65,5 +80,9 @@
 
             </div>
         </section>
+
+        <!-- Add the library (only one file) -->
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.0.9/index.js"></script>
     </body>
 </html>
