--- a/equipment.html
+++ b/equipment.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <script
-            src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <link href="./output.css" rel="stylesheet">
+
         <style>
             header::before {
                 content: '';
@@ -23,14 +23,15 @@
             }
         </style>
     </head>
-    <body>
+    <body class="font-light tracking-wider text-gray-600 leading-8">
+
         <header
             style="background: url(https://images.pexels.com/photos/7723391/pexels-photo-7723391.jpeg) center/cover; height: 300px;"
             class="relative text-white header-bg-img ">
             <div
                 class="max-w-4xl top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
                 <h1
-                    class="text-yellow-500 text-3xl mb-8 text-center z-50">環境介紹簡介</h1>
+                    class="text-skin text-3xl mb-8 text-center z-50">環境介紹簡介</h1>
                 <p
                     class="text-white z-50">我們是一家結合專業技術與細緻服務的全能型牙醫診所，位於台北東區，打造宛如五星級飯店般舒適的就診環境，從植牙、美學、
                     矯正到日常保健，每一個細節都用心守護。
@@ -40,14 +41,51 @@
         <section class="container max-w-5xl mx-auto py-8">
             <div class="flex flex-wrap">
                 <div class="w-1/2 p-2">
-                    <h3 class="text-3xl text-amber-500 mb-10 ">Flash 冷光美白機</h3>
+                    <h3 class="text-3xl text-darkskin mb-4 font-medium">Flash
+                        冷光美白機</h3>
                     <p>德國Flash
                         冷光美白是一種非侵入式的牙齒美白技術，透過專利冷光照射搭配美白凝膠，表面達到氧化還原的效果，進而改善牙齒顏色。療程時間短、效果自然，且不傷牙齒結構，是想要提升牙齒亮白度的理想選擇。</p>
                 </div>
                 <div class="w-1/2 p-2">
                     <img src="https://placehold.co/600x400/" alt>
                 </div>
+            </div>
 
+            <div class="flex flex-wrap">
+                <div class="w-1/2 p-2">
+                    <h3 class="text-3xl text-darkskin mb-4 font-medium">iTero 5D
+                        Plus</h3>
+                    <p>iTero 5D Plus 是最新一代的口腔數位掃描設備， 具備 3D
+                        光學掃描、近紅外線（NIRI）齲齒偵測、即時咬合分析與矯正模擬功能，能在短時間內取得高精準度的口內影像。搭配隱適美（Invisalign）等數位治療系統，提升治療效率與患者體驗，是現代化數位牙科不可或缺的利器</p>
+                </div>
+                <div class="w-1/2 p-2">
+                    <img src="https://placehold.co/600x400/" alt>
+                </div>
+            </div>
+
+            <div class="flex flex-wrap">
+                <div class="w-1/2 p-2">
+                    <h3 class="text-3xl text-darkskin mb-4 font-medium">Opelaser
+                        Pro</h3>
+                    <p>Opelaser Pro
+                        是專為牙科臨床設計的高效能二氧化碳雷射系統，擁有精準、安全、低侵入性的特性。可應用於牙齦微整形、牙周治療、口腔軟組織切除與傷口殺菌止血，有效減少出血與術後不適，加速組織修復。治療更細緻、恢復更快速，是現代微創牙科的重要利器。</p>
+                </div>
+                <div class="w-1/2 p-2">
+                    <img src="https://placehold.co/600x400/" alt>
+                </div>
+            </div>
+
+            <div class="flex flex-wrap">
+                <div class="w-1/2 p-2">
+                    <h3 class="text-3xl text-darkskin mb-4 font-medium">Flash
+                        Zumax
+                        顯微鏡具</h3>
+                    <p>Zumax
+                        顯微鏡具備高倍率、高解析度與多段變焦功能，可放大口腔細節，提升治療精準度與可視範圍，廣泛應用於根管治療、補綴修復、微創手術等精密療程。提高手術成功率與患者舒適度，是現代精準牙科不可或缺的利器。</p>
+                </div>
+                <div class="w-1/2 p-2">
+                    <img src="https://placehold.co/600x400/" alt>
+                </div>
             </div>
         </section>
     </body>
