--- a/homepage.html
+++ b/homepage.html
@@ -116,7 +116,7 @@
                             class="text-sm items-center hidden lg:ml-6 lg:flex lg:space-x-8">
                             <!-- Current: "border-indigo-500 ", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
                             <a href="#"
-                                class="items-center0 border-b-2 border-transparent px-1 pt-1 font-medium  hover:border-gray-300 hover:text-gray-70 border-sky-700 ">首頁</a>
+                                class="items-center0 border-b-2 border-transparent px-1 pt-1 font-medium  hover:border-gray-300 hover:text-gray-70 border-sky-700 ">首頁d</a>
 
                             <div class="dropdown">
                                 <button
