--- a/environment.html
+++ b/environment.html
@@ -43,25 +43,25 @@
             <div class="flex flex-wrap">
                 <div class="w-1/4 p-2">
                     <a data-fslightbox="gallery"
-                        href="https://images.pexels.com/photos/32750830/pexels-photo-32750830.jpeg">
+                        href="./img/診所-1.png">
                         <img
-                            src="https://images.pexels.com/photos/32750830/pexels-photo-32750830.jpeg"
+                            src="./img/診所-1.png"
                             alt>
                     </a>
                 </div>
                 <div class="w-1/4 p-2">
                     <a data-fslightbox="gallery"
-                        href="https://images.pexels.com/photos/14068779/pexels-photo-14068779.jpeg">
+                        href="./img/診所-2.png">
                         <img
-                            src="https://images.pexels.com/photos/14068779/pexels-photo-14068779.jpeg"
+                            src="./img/診所-2.png"
                             alt>
                     </a>
                 </div>
                 <div class="w-1/4 p-2">
                     <a data-fslightbox="gallery"
-                        href="https://images.pexels.com/photos/32832431/pexels-photo-32832431.jpeg">
+                        href="./img/診所-3.png">
                         <img
-                            src="https://images.pexels.com/photos/32832431/pexels-photo-32832431.jpeg"
+                            src="./img/診所-3.png"
                             alt>
                     </a>
                 </div>
