--- a/equipment.html
+++ b/equipment.html
@@ -47,7 +47,7 @@
                         冷光美白是一種非侵入式的牙齒美白技術，透過專利冷光照射搭配美白凝膠，表面達到氧化還原的效果，進而改善牙齒顏色。療程時間短、效果自然，且不傷牙齒結構，是想要提升牙齒亮白度的理想選擇。</p>
                 </div>
                 <div class="w-1/2 p-2">
-                    <img src="https://placehold.co/600x400/" alt>
+                    <img src="./img/equipment-口掃機.jpg" alt>
                 </div>
             </div>
 
@@ -59,7 +59,7 @@
                         光學掃描、近紅外線（NIRI）齲齒偵測、即時咬合分析與矯正模擬功能，能在短時間內取得高精準度的口內影像。搭配隱適美（Invisalign）等數位治療系統，提升治療效率與患者體驗，是現代化數位牙科不可或缺的利器</p>
                 </div>
                 <div class="w-1/2 p-2">
-                    <img src="https://placehold.co/600x400/" alt>
+                    <img src="./img/equipment-Promax.png" alt>
                 </div>
             </div>
 
