--- a/about.html
+++ b/about.html
@@ -94,7 +94,8 @@ background: linear-gradient(90deg, rgba(88, 141, 214, 1) 0%, rgba(133, 204, 250,
                 </div>
 
                 <div class="w-full sm:w-1/2 pl-8">
-                    <img src="https://placehold.co/600x400/EEE/31343C" alt>
+                    <img src="./img/關於我們_1.png" alt
+                        class="rounded-xl shadow-xl">
                 </div>
             </div>
 
@@ -122,7 +123,8 @@ background: linear-gradient(90deg, rgba(88, 141, 214, 1) 0%, rgba(133, 204, 250,
                 </div>
 
                 <div class="w-full sm:w-1/2 pl-8">
-                    <img src="https://placehold.co/600x400/EEE/31343C" alt>
+                    <img src="./img/關於我們_2.png" alt
+                        class="rounded-xl shadow-xl">
                 </div>
             </div>
 
@@ -146,7 +148,8 @@ background: linear-gradient(90deg, rgba(88, 141, 214, 1) 0%, rgba(133, 204, 250,
                 </div>
 
                 <div class="w-full sm:w-1/2 pl-8">
-                    <img src="https://placehold.co/600x400/EEE/31343C" alt>
+                    <img src="./img/關於我們_3.png" alt
+                        class="rounded-xl shadow-xl">
                 </div>
             </div>
         </section>
