--- a/homepage.html
+++ b/homepage.html
@@ -718,32 +718,12 @@
             </div>
         </section>
 
-        <footer class="bg-darkskin py-8 sm:py-16">
+        <section class="py-17 bg-gray-50">
             <div class="container mx-auto">
                 <div class="flex flex-wrap mx-0 px-3 sm:-mx-6">
-
                     <div
                         class="w-full sm:w-4/12 px-8 sm:px-6 mt-8 sm:mt-0">
-                        <h3
-                            class="text-gray-300 text-xl font-normal mb-6">導覽列</h3>
-                        <ul class="text-gray-100 font-normal">
-                            <li class="mb-2"><a
-                                    href="https://www.bigboycancode.com/">首頁</a></li>
-                            <li class="mb-2"><a
-                                    href="https://www.bigboycancode.com/all-courses">線上課程</a></li>
-                            <li class="mb-2"><a
-                                    href="https://www.bigboycancode.com/contact-info">程式服務</a></li>
-                            <li class="mb-2"><a
-                                    href="https://www.bigboycancode.com/portfolio">作品</a></li>
-                            <li class="mb-2"><a
-                                    href="https://www.bigboycancode.com/wordpress-website">部落格</a></li>
-                            <li><a
-                                    href="https://www.bigboycancode.com/contact-info">聯絡我們</a></li>
-                        </ul>
-                    </div>
-                    <div
-                        class="w-full sm:w-4/12 px-8 sm:px-6 mt-8 sm:mt-0">
-                        <ul class="text-gray-100 font-normal">
+                        <ul class=" font-normal">
                             <li class="mb-4 flex items-center">
                                 美德美學牙醫診所<br />
                                 台北市大里區慈德路158號<br />
@@ -755,106 +735,120 @@
 
                     <div
                         class="w-full sm:w-4/12 px-8 sm:px-6 mt-8 sm:mt-0">
-                        <div class=" flex items-center text-white font-normal">
+                        <div class=" flex items-center  font-normal">
                             美德美學牙醫診所<br />
                             台中市大里區慈德路158號<br />
                             04-24966788<br />
-                            週一至週三 <br />09:30–11:30<br /> 14:00–16:30 <br />
-                            18:00–21:00<br />
+                            週一至週三
+                            <br />&nbsp;&nbsp;&nbsp;&nbsp;09:30–11:30<br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;14:00–16:30 <br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;18:00–21:00<br />
                             週四、週五<br />
-                            09:30–12:30 <br /> 14:00–16:30 <br />
-                            17:30–19:00<br />
-                            週六<br /> 09:30–11:30 <br /> 14:00–17:00<br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;09:30–12:30 <br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;14:00–16:30 <br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;17:30–19:00<br />
+                            週六<br /> &nbsp;&nbsp;&nbsp;&nbsp;09:30–11:30 <br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;14:00–17:00<br />
                             週日公休
                         </div>
                     </div>
-                </div>
-                <div class="flex flex-wrap mx-0 px-3 sm:-mx-6">
+
                     <div
-                        class="w-full sm:w-1/2 text-white leading-8 text-xl px-8 sm:px-6 mt-8 sm:mt-0">
+                        class="w-full sm:w-4/12 px-8 sm:px-6 mt-8 sm:mt-0">
+                        美德美學牙醫診所<br>
+                        台北市大安區忠孝東路4段230號6樓<br>02-27711033
+                        <ul class="mt-2 flex">
+                            <li>
+                                <!-- Youtube -->
+                                <a target="_blank"
+                                    rel="me noopener noreferrer"
+                                    href="https://www.youtube.com/user/kuanhsuh">
+                                    <svg
+                                        class="h-8 w-8 fill-current text-teal-300 inline-block mr-2"
+                                        viewBox="0 -61 512 512"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M437 0H75C33.602 0 0 33.602 0 75v240c0 41.398 33.602 75 75 75h362c41.398 0 75-33.602 75-75V75c0-41.398-33.602-75-75-75zm0 0"
+                                            fill="#ff3939"></path>
+                                        <path
+                                            d="M512 75v240c0 41.398-33.602 75-75 75H256V0h181c41.398 0 75 33.602 75 75zm0 0"
+                                            fill="#c90232"></path>
+                                        <path
+                                            d="M256 136.2l-75-41.7v204l75-43.2 105.602-60.6zm0 0"
+                                            fill="#ececf1"></path>
+                                        <path
+                                            d="M361.602 194.7L256 255.3V136.2zm0 0"
+                                            fill="#e2e2e7"></path>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <!-- FB -->
+                                <a target="_blank"
+                                    rel="me noopener noreferrer"
+                                    href="https://www.facebook.com/bigboycancode/">
+                                    <svg
+                                        class="h-8 w-8 inline-block mr-2"
+                                        viewBox="0 0 512 512"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M497 512H15c-8.284 0-15-6.716-15-15V15C0 6.716 6.716 0 15 0h482c8.284 0 15 6.716 15 15v482c0 8.284-6.716 15-15 15z"
+                                            fill="#3a559f"></path>
+                                        <path
+                                            d="M497 0H256v512h241c8.284 0 15-6.716 15-15V15c0-8.284-6.716-15-15-15z"
+                                            fill="#23448e"></path>
+                                        <path
+                                            d="M280.681 205.261v-19.248c0-43.534 13.761-42.284 55.081-42.284h1.974c5.523 0 10-4.477 10-10V85.325c0-5.5-4.5-10-10-10h-46.855c-44.753 0-81.37 36.616-81.37 81.37v19.007h-.149v29.559h-35.237c-5.523 0-10 4.477-10 10v46.755c0 5.523 4.477 10 10 10h35.237v154.658c0 5.523 4.477 10 10 10h51.249c5.523 0 10-4.477 10-10V272.017h47.263c5.523 0 10-4.477 10-10l10-46.755c0-5.523-4.477-10-10-10h-57.193z"
+                                            fill="#fff"></path>
+                                        <path
+                                            d="M337.874 205.261h-57.193v-19.248c0-43.534 13.761-42.284 55.081-42.284h1.974c5.523 0 10-4.477 10-10V85.325c0-5.5-4.5-10-10-10h-46.855A80.606 80.606 0 00256 83.238v353.437h14.612c5.523 0 10-4.477 10-10V272.017h47.263c5.523 0 10-4.477 10-10l10-46.755c-.001-5.524-4.478-10.001-10.001-10.001z"
+                                            fill="#d7f2f9"></path>
+                                    </svg>
+                                </a>
+
+                            </li>
+                            <li>
+                                <a target="_blank"
+                                    rel="me noopener noreferrer"
+                                    href="https://line.me/ti/p/QlwtgbbMMS">
+                                    <svg
+                                        class="h-8 w-8 inline-block mr-2"
+                                        viewBox="0 -11 512 512"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M435.863 60.645C387.683 21.535 323.805 0 256 0S124.32 21.535 76.137 60.645C27.039 100.488 0 153.746 0 210.602c0 53.503 24.348 104.472 68.555 143.515 39.937 35.27 92.96 58.04 150.535 64.875v55.856c0 8.285 6.715 15 15 15 25.945 0 96.18-31.84 155.476-77.528 35.422-27.293 63.809-56.601 84.368-87.12C499.19 287.71 512 249.151 512 210.601c0-56.856-27.04-110.114-76.137-149.957zm0 0"
+                                            fill="#54e360"></path>
+                                        <path
+                                            d="M435.863 60.645C387.683 21.535 323.805 0 256 0v485.73c33.285-9.988 86.82-37.394 133.566-73.41 35.422-27.293 63.809-56.601 84.368-87.12C499.19 287.71 512 249.151 512 210.601c0-56.856-27.04-110.114-76.137-149.957zm0 0"
+                                            fill="#1fbf66"></path>
+                                        <g fill="#e7f0ef">
+                                            <path
+                                                d="M164.555 246.516h-34.703v-88.211c0-6.54-6.008-10.93-14.946-10.93s-14.945 4.39-14.945 10.93v104.437c0 6.426 5.746 11.086 13.66 11.086h50.934c6.238 0 10.765-5.742 10.765-13.656 0-8.043-4.425-13.656-10.765-13.656zm0 0M197.668 147.375c-8.938 0-14.941 4.39-14.941 10.93v104.437c0 6.528 6.144 11.086 14.941 11.086 8.66 0 14.941-4.66 14.941-11.086V158.305c0-6.54-6.004-10.93-14.941-10.93zm0 0M299.871 147.375c-8.937 0-14.941 4.39-14.941 10.93v46.097l-22.528-43.535c-5.5-10.469-9.89-13.492-19.566-13.492-8.941 0-14.945 4.457-14.945 11.09v104.277c0 6.528 6.144 11.086 14.945 11.086 8.656 0 14.941-4.66 14.941-11.086v-46.637l26.102 48.801c3.246 5.922 8.629 8.922 15.996 8.922 8.656 0 14.941-4.66 14.941-11.086V158.305c0-6.54-6.003-10.93-14.945-10.93zm0 0"></path>
+                                        </g>
+                                        <path
+                                            d="M400.95 246.516h-40.97v-23.297h19.922c7.203 0 11.086-6.457 11.086-12.535 0-7.329-4.765-12.856-11.086-12.856H359.98v-23.133h40.97c6.429 0 11.09-5.812 11.09-13.82 0-7.82-4.661-13.5-11.09-13.5h-57.2c-7.914 0-13.656 4.664-13.656 11.09v104.277c0 6.426 5.742 11.086 13.656 11.086h57.2c6.429 0 11.09-5.676 11.09-13.5 0-8.004-4.661-13.812-11.09-13.812zm0 0M299.871 147.375c-8.937 0-14.941 4.39-14.941 10.93v46.097l-22.528-43.535c-2.172-4.14-4.18-7.101-6.402-9.183V268.23a9.295 9.295 0 001.777-5.488v-46.637l26.102 48.801c3.246 5.922 8.629 8.922 15.996 8.922 8.656 0 14.941-4.66 14.941-11.086V158.305c0-6.54-6.003-10.93-14.945-10.93zm0 0"
+                                            fill="#c5e1e6"></path>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <footer class="bg-darkskin py-8 sm:py-16">
+            <div class="container mx-auto">
+
+                <div class="text-white flex flex-wrap mx-0 px-3 sm:-mx-6">
+                    <div
+                        class="w-full sm:w-1/2 leading-8 text-xl px-8 sm:px-6 mt-8 sm:mt-0">
                         我們是一家結合專業技術與細緻服務的全能型牙醫診所，位於台北東區，打造宛如五星級飯店般舒適的就診環境，從植牙、美學、
                         矯正到日常保健，每一個細節都用心守護。在這裡，我們不只治療牙齒，更照顧您的感受，讓每位走出診所的您，都能重拾自信，展現最美的笑容。
                     </div>
                 </div>
-            </div>
-            <div class="flex">
-                <div class="w-full px-8 sm:px-6">
-                    <ul class="mt-6 flex justify-center">
-                        <li>
-                            <!-- Youtube -->
-                            <a target="_blank"
-                                rel="me noopener noreferrer"
-                                href="https://www.youtube.com/user/kuanhsuh">
-                                <svg
-                                    class="h-10 w-10 fill-current text-teal-300 inline-block mr-2"
-                                    viewBox="0 -61 512 512"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M437 0H75C33.602 0 0 33.602 0 75v240c0 41.398 33.602 75 75 75h362c41.398 0 75-33.602 75-75V75c0-41.398-33.602-75-75-75zm0 0"
-                                        fill="#ff3939"></path>
-                                    <path
-                                        d="M512 75v240c0 41.398-33.602 75-75 75H256V0h181c41.398 0 75 33.602 75 75zm0 0"
-                                        fill="#c90232"></path>
-                                    <path
-                                        d="M256 136.2l-75-41.7v204l75-43.2 105.602-60.6zm0 0"
-                                        fill="#ececf1"></path>
-                                    <path
-                                        d="M361.602 194.7L256 255.3V136.2zm0 0"
-                                        fill="#e2e2e7"></path>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <!-- FB -->
-                            <a target="_blank"
-                                rel="me noopener noreferrer"
-                                href="https://www.facebook.com/bigboycancode/">
-                                <svg
-                                    class="h-10 w-10 inline-block mr-2"
-                                    viewBox="0 0 512 512"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M497 512H15c-8.284 0-15-6.716-15-15V15C0 6.716 6.716 0 15 0h482c8.284 0 15 6.716 15 15v482c0 8.284-6.716 15-15 15z"
-                                        fill="#3a559f"></path>
-                                    <path
-                                        d="M497 0H256v512h241c8.284 0 15-6.716 15-15V15c0-8.284-6.716-15-15-15z"
-                                        fill="#23448e"></path>
-                                    <path
-                                        d="M280.681 205.261v-19.248c0-43.534 13.761-42.284 55.081-42.284h1.974c5.523 0 10-4.477 10-10V85.325c0-5.5-4.5-10-10-10h-46.855c-44.753 0-81.37 36.616-81.37 81.37v19.007h-.149v29.559h-35.237c-5.523 0-10 4.477-10 10v46.755c0 5.523 4.477 10 10 10h35.237v154.658c0 5.523 4.477 10 10 10h51.249c5.523 0 10-4.477 10-10V272.017h47.263c5.523 0 10-4.477 10-10l10-46.755c0-5.523-4.477-10-10-10h-57.193z"
-                                        fill="#fff"></path>
-                                    <path
-                                        d="M337.874 205.261h-57.193v-19.248c0-43.534 13.761-42.284 55.081-42.284h1.974c5.523 0 10-4.477 10-10V85.325c0-5.5-4.5-10-10-10h-46.855A80.606 80.606 0 00256 83.238v353.437h14.612c5.523 0 10-4.477 10-10V272.017h47.263c5.523 0 10-4.477 10-10l10-46.755c-.001-5.524-4.478-10.001-10.001-10.001z"
-                                        fill="#d7f2f9"></path>
-                                </svg>
-                            </a>
 
-                        </li>
-                        <li>
-                            <a target="_blank"
-                                rel="me noopener noreferrer"
-                                href="https://line.me/ti/p/QlwtgbbMMS">
-                                <svg
-                                    class="h-10 w-10 inline-block mr-2"
-                                    viewBox="0 -11 512 512"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M435.863 60.645C387.683 21.535 323.805 0 256 0S124.32 21.535 76.137 60.645C27.039 100.488 0 153.746 0 210.602c0 53.503 24.348 104.472 68.555 143.515 39.937 35.27 92.96 58.04 150.535 64.875v55.856c0 8.285 6.715 15 15 15 25.945 0 96.18-31.84 155.476-77.528 35.422-27.293 63.809-56.601 84.368-87.12C499.19 287.71 512 249.151 512 210.601c0-56.856-27.04-110.114-76.137-149.957zm0 0"
-                                        fill="#54e360"></path>
-                                    <path
-                                        d="M435.863 60.645C387.683 21.535 323.805 0 256 0v485.73c33.285-9.988 86.82-37.394 133.566-73.41 35.422-27.293 63.809-56.601 84.368-87.12C499.19 287.71 512 249.151 512 210.601c0-56.856-27.04-110.114-76.137-149.957zm0 0"
-                                        fill="#1fbf66"></path>
-                                    <g fill="#e7f0ef">
-                                        <path
-                                            d="M164.555 246.516h-34.703v-88.211c0-6.54-6.008-10.93-14.946-10.93s-14.945 4.39-14.945 10.93v104.437c0 6.426 5.746 11.086 13.66 11.086h50.934c6.238 0 10.765-5.742 10.765-13.656 0-8.043-4.425-13.656-10.765-13.656zm0 0M197.668 147.375c-8.938 0-14.941 4.39-14.941 10.93v104.437c0 6.528 6.144 11.086 14.941 11.086 8.66 0 14.941-4.66 14.941-11.086V158.305c0-6.54-6.004-10.93-14.941-10.93zm0 0M299.871 147.375c-8.937 0-14.941 4.39-14.941 10.93v46.097l-22.528-43.535c-5.5-10.469-9.89-13.492-19.566-13.492-8.941 0-14.945 4.457-14.945 11.09v104.277c0 6.528 6.144 11.086 14.945 11.086 8.656 0 14.941-4.66 14.941-11.086v-46.637l26.102 48.801c3.246 5.922 8.629 8.922 15.996 8.922 8.656 0 14.941-4.66 14.941-11.086V158.305c0-6.54-6.003-10.93-14.945-10.93zm0 0"></path>
-                                    </g>
-                                    <path
-                                        d="M400.95 246.516h-40.97v-23.297h19.922c7.203 0 11.086-6.457 11.086-12.535 0-7.329-4.765-12.856-11.086-12.856H359.98v-23.133h40.97c6.429 0 11.09-5.812 11.09-13.82 0-7.82-4.661-13.5-11.09-13.5h-57.2c-7.914 0-13.656 4.664-13.656 11.09v104.277c0 6.426 5.742 11.086 13.656 11.086h57.2c6.429 0 11.09-5.676 11.09-13.5 0-8.004-4.661-13.812-11.09-13.812zm0 0M299.871 147.375c-8.937 0-14.941 4.39-14.941 10.93v46.097l-22.528-43.535c-2.172-4.14-4.18-7.101-6.402-9.183V268.23a9.295 9.295 0 001.777-5.488v-46.637l26.102 48.801c3.246 5.922 8.629 8.922 15.996 8.922 8.656 0 14.941-4.66 14.941-11.086V158.305c0-6.54-6.003-10.93-14.945-10.93zm0 0"
-                                        fill="#c5e1e6"></path>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
             </div>
         </footer>
 
